Comeco da estilizacao dos inputs

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <form class="formulario"> 
             <fieldset>
                 <legend class="formulario__legenda">Informações pessoais</legend>
-                <input id="nome" class="formulario__input">
-                <input id="dataNascimento" class="formulario__input">
-                <input id="cpf" class="formulario__input">
+                <input id="nome" class="formulario__input" placeholder="NOME COMPLETO">
+                <input id="dataNascimento" class="formulario__input" placeholder="DATA DE NASCIMENTO">
+                <input id="cpf" class="formulario__input" placeholder="CPF">
             </fieldset>
             <fieldset>
                 <legend class="formulario__legenda">Informações da conta</legend>
-                <input id="email" class="formulario__input">
-                <input id="senha" class="formulario__input">
-                <input id="confirmaSenha" class="formulario__input">
+                <input id="email" class="formulario__input" placeholder="EMAIL">
+                <input id="senha" class="formulario__input" placeholder="SENHA">
+                <input id="confirmaSenha" class="formulario__input" placeholder="CONFIRMAR SENHA">
             </fieldset>
             <fieldset>
                 <legend class="formulario__legenda">Endereço</legend>
-                <input id="cep" class="formulario__input">
-                <input id="cidade" class="formulario__input">
-                <input id="estado" class="formulario__input">
-                <input id="numero" class="formulario__input">
-                <input id="complemento" class="formulario__input">
+                <input id="cep" class="formulario__input" placeholder="CEP">
+                <input id="cidade" class="formulario__input" placeholder="CIDADE">
+                <input id="estado" class="formulario__input" placeholder="ESTADO">
+                <input id="numero" class="formulario__input" placeholder="NÚMERO">
+                <input id="complemento" class="formulario__input" placeholder="COMPLEMENTO">
             </fieldset>
         </form>
 
