--- a/index.html
+++ b/index.html
@@ -20,24 +20,74 @@
         <form class="formulario"> 
             <fieldset>
                 <legend class="formulario__legenda">Informações pessoais</legend>
-                <input id="nome" class="formulario__input" placeholder="Nome Completo" type="text" required>
-                <input id="dataNascimento" class="formulario__input" placeholder="Data De Nascimento" type="date" required>
-                <input id="cpf" class="formulario__input" placeholder="CPF" type="text" required>
-                <input id="telefone" class="formulario__input" placeholder="Telefone" type="tel" required>
+
+                <div class="formulario__conteiner">
+                    <input id="nome" class="formulario__input" type="text" required>
+                    <label for="nome" class="formulario__label">Nome Completo</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="dataNascimento" class="formulario__input" type="date" required>
+                <label for="dataNascimento" class="formulario__label" id="labelData">Data De Nascimento</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="cpf" class="formulario__input" type="text" required>
+                <label for="cpf" class="formulario__label">CPF</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="telefone" class="formulario__input" type="tel" required>
+                <label for="telefone" class="formulario__label">Telefone</label>
+                </div>
+
             </fieldset>
             <fieldset>
                 <legend class="formulario__legenda">Informações da conta</legend>
-                <input id="email" class="formulario__input" placeholder="Email" type="email" required>
-                <input id="senha" class="formulario__input" placeholder="Senha" type="password" required>
-                <input id="confirmaSenha" class="formulario__input" placeholder="Confirmar Senha" type="password" required>
+               
+                <div class="formulario__conteiner">
+                <input id="email" class="formulario__input" type="email" required>
+                <label for="email" class="formulario__label">Email</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="senha" class="formulario__input" type="password" required>
+                <label for="senha" class="formulario__label">Senha</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="confirmaSenha" class="formulario__input" type="password" required>
+                <label for="confirmaSenha" class="formulario__label">Confirmar senha</label>
+                </div>
+
             </fieldset>
             <fieldset>
                 <legend class="formulario__legenda">Endereço</legend>
-                <input id="cep" class="formulario__input" placeholder="CEP" type="text" required>
-                <input id="cidade" class="formulario__input" placeholder="Cidade" type="text" required>
-                <input id="estado" class="formulario__input" placeholder="Estado" type="text" required>
-                <input id="numero" class="formulario__input" placeholder="Número" type="text" required>
-                <input id="complemento" class="formulario__input" placeholder="Complemento" type="text" required>
+
+                <div class="formulario__conteiner">
+                <input id="cep" class="formulario__input" type="text" required>
+                <label for="cep" class="formulario__label">CEP</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="cidade" class="formulario__input" type="text" required>
+                <label for="cidade" class="formulario__label">Cidade</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="estado" class="formulario__input" type="text" required>
+                <label for="estado" class="formulario__label">Estado</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="numero" class="formulario__input" type="text" required>
+                <label for="numero" class="formulario__label">Numero</label>
+                </div>
+
+                <div class="formulario__conteiner">
+                <input id="complemento" class="formulario__input" type="text" required>
+                <label for="complemento" class="formulario__label">Complemento</label>
+                </div>
             </fieldset>
             <input type="submit" class="formulario__enviar">
         </form>
