Melhoria verificacao email

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                
                 <div class="formulario__conteiner">
                     <input id="email" class="formulario__input" type="email" required>
-                    <label for="email" class="formulario__label">Email</label>
                     <span class="formulario__span">*Preencha este campo</span>
+                    <span class="erroEmailInvalido">*Digite um endereço de email válido</span>
+                    <label for="email" class="formulario__label">Email</label>
                 </div>
 
                 <div class="formulario__conteiner">
