Comecando a validacao de cpf

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
                 <div class="formulario__conteiner">
                     <input id="cpf" class="formulario__input" type="text" required>
-                    <label for="cpf" class="formulario__label">CPF</label>
                     <span class="formulario__span">*Preencha este campo</span>
+                    <span class="erroCPFInvalido">*O CPF informado não é válido</span>
+                    <label for="cpf" class="formulario__label">CPF</label>
                 </div>
 
                 <div class="formulario__conteiner">
